--- a/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
+++ b/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
@@ -28,7 +28,7 @@
                             <button ng-click="addToltalEarningDeductionRule(headId)" type="button" class="btn btn-info">
                                 <i class="fa fa-plus"></i> Add</button>
                         </div>
-                        <div ng-show="deletedRows.length>0" class="col-lg-2">
+                        <div ng-show="deletedRows.length>0 && edit" class="col-lg-2">
                             <button ng-click="restoreData()" type="button" class="btn btn-info">
                                 <i class="fa fa-plus"></i>Restore</button>
                         </div>
