--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -16,7 +16,7 @@
                             <div class="col-md-9">
                                 <div class="dropdown pull-left">
                                     <button class="btn btn-xs btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                                            {{'ShowDataFor'| translate}} {{selectedQueryType | translate}}
+                                            {{selectedQueryType | translate}}
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
