--- a/src/app/pages/leave/transaction/employeeleaveapplication/leave.employeeleave.html
+++ b/src/app/pages/leave/transaction/employeeleaveapplication/leave.employeeleave.html
@@ -110,6 +110,14 @@
                                                         ng-change="onConditionalLeaveTypeChange()">
                                             </select>
                                                 </div>
+                                                <div class="col-md-5">
+                                                    <div class="checkbox">
+                                                        <label class="custom-checkbox">      
+                                                <input  type="checkbox"  ng-model="entity.LEADIsForLateDays" > 
+                                                <span>For Late Days</span>
+                                               </label>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="row" ng-if="leaveCtrl.appliedDays>0">
                                                 <div class="col-md-6">
