--- a/src/sass/theme/components/_pageTop.scss
+++ b/src/sass/theme/components/_pageTop.scss
@@ -34,6 +34,11 @@ a.al-logo {
   margin-top: 10px;
 }
 
+.current-Period{
+  float: left;
+  max-width:150px; 
+}
+
 .al-user-profile {
   float: right;
   margin-right: 12px;
@@ -113,7 +118,7 @@ a.collapse-menu-link {
   transition: all 0.5s ease;
   white-space: nowrap;
   overflow: hidden;
-  width: 162px;
+  width: 600px;
   float: left;
   margin: 20px 0 0 30px;
 
