--- a/src/app/theme/components/pageTop/pageTop.html
+++ b/src/app/theme/components/pageTop/pageTop.html
@@ -17,8 +17,9 @@
         min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true"
         close-text="Close" ng-click="open($event)" ng-readonly="true" />
 
-      <!-- <msg-center></msg-center> -->
+      
     </div>
+    <msg-center></msg-center>
     <div class="al-user-profile" uib-dropdown>
       <a uib-dropdown-toggle class="profile-toggle-link">
         <!-- <img ng-src="{{::( 'Nasta' | profilePicture )}}"> -->
