--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -220,7 +220,7 @@
             </table> -->
 
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel ba-panel-title="Next Week Employee Birthday List" ba-panel-class="medium-panel">
+            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel ba-panel-title="UpComing Birthday Employee List" ba-panel-class="medium-panel">
                 <div ui-grid="BirthdayNextWeekGridOpt" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
                 </div>
 
@@ -252,7 +252,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel ba-panel-title="Next Week Holiday List" ba-panel-class="medium-panel traffic-panel">
+            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel ba-panel-title="UpComing Holiday List" ba-panel-class="medium-panel traffic-panel">
                 <div ui-grid="HolidayNextWeekGridOpt" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
                 </div>
                 <!-- <table id="mytable" class="table table-striped table-bordered table-hover table-sm table-responsive pad0A" cellspacing="0"
@@ -282,14 +282,15 @@
 
             </div>
 
-            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel-class="medium-panel">
-
+            <div class="col-lg-6 col-md-12 col-sm-12" ba-panel ba-panel-title="Holiday List" ba-panel-class="medium-panel traffic-panel">
+                <div ui-grid="HolidayAllListGridOpt" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
+                </div>
 
 
             </div>
         </div>
     </div>
-    <div ng-hide="adminDahboard">
+    <!-- <div ng-hide="adminDahboard">
 
         <div class="row">
             <div class="col-md-6" ba-panel ba-panel-title="Leave List" ba-panel-class="feed-comply-panel with-scroll todo-panel">
@@ -308,7 +309,7 @@
                 <div ui-grid="leaveOption" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
                 </div>
 
-            </div> -->
+            </div> 
             <div class="col-lg-6" ba-panel ba-panel-title="Holiday List" ba-panel-class="medium-panel">
                 <div ui-grid="holidayOption" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
                 </div>
@@ -322,7 +323,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 </div>
