--- a/src/app/pages/attendance/shiftmaster/shiftmaster.html
+++ b/src/app/pages/attendance/shiftmaster/shiftmaster.html
@@ -395,6 +395,25 @@
                 </div>
             </div>
 
+           
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="form-group col-md-4 ">
+                            <label for="inputPassword3 ">{{page.pageinfo.fields.StatusBGClass.text}}</label>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <field-box page="page" ng-column="page.pageinfo.fields.StatusBGClass " ng-entity="entity " form="editForm "></field-box>
+                        </div>
+                        
+                    </div>
+                    <div class="row">
+
+                    </div>
+                </div>
+            </div>
+
             <!-- <h3 class="with-line ">Grouping (Shift Rule Apply On Group Of Employee)</h3>
             <div class="row">
                 <div class="form-group col-md-4">
