--- a/src/app/common/components/listReport/listReport.html
+++ b/src/app/common/components/listReport/listReport.html
@@ -28,7 +28,7 @@
                         position:absolute;
                         top:200px;
                         left:0px;" ng-click="page.showFilter=!page.showFilter">
-                            <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
+                        <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
                     </button>
 
 
@@ -36,20 +36,41 @@
                     <i id="progress-bar" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
 
 
-                    <table ng-show="page.reportData.tables.length<=0"class="table table-striped table-bordered table-hover table-sm table-responsive pad0A">
+
+                    <div id="listReportViewGrid" ui-grid="page.gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit
+                        ui-grid-expandable class="djGrid">
+                        <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
+                        <div class="no-data font-black" ng-if="page.dataIsLoading">
+                            <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
+                        </div>
+                    </div>
+
+                    <div id="listReportPrintGrid" ui-grid="page.gridOptions2" ui-grid-auto-resize style="display: none; visibility: hidden">
+                        <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
+                        <div class="no-data font-black" ng-if="page.dataIsLoading">
+                            <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
+                        </div>
+                    </div>
+
+                    <button id="print-button" class="btn btn-xs btn-primary  pull-right" data-toggle="modal" ng-click="callReportPrint();">
+                        Print
+                    </button>
+
+                    <table ng-show="page.reportData.tables.length<=0" class="table table-striped table-bordered table-hover table-sm table-responsive pad0A"
+                        ng-if="false">
                         <caption>
-                            <h3 >No Data Found</h3>
+                            <h3>No Data Found</h3>
                         </caption>
-        
+
                     </table>
-        
-                   
-        
-                    <table id="mytable" class="table table-striped table-bordered table-hover table-sm table-responsive pad0A"
-                           cellspacing="0" width="100%">
+
+
+
+                    <table id="mytable" class="table table-striped table-bordered table-hover table-sm table-responsive pad0A" cellspacing="0"
+                        width="100%" ng-if="false">
                         <tbody ng-repeat="table in page.reportData.tables" style="border:solid 1px black !important">
                             <tr>
-                                <td class="font-bold font-size-14"  colspan="{{page.reportData.header.length}}">{{table.header}}</td>
+                                <td class="font-bold font-size-14" colspan="{{page.reportData.header.length}}">{{table.header}}</td>
                             </tr>
                             <tr>
                                 <th ng-repeat="head in page.reportData.header" class="font-bold">
@@ -70,7 +91,7 @@
                                         <span ng-if="head.name == col.name && head.type != 'currency'">
                                             {{col.value}}
                                         </span>
-                                    </span> 
+                                    </span>
                                 </td>
                             </tr>
                             <tr scope="row" ng-if="table.total.length>0 && table.rows.length>1">
